# bambu

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml
.github/workflows/: python-linter.yml  python-package.yml
scripts/: get_employee.sh
src/bambu/: __init__.py  api.py  bambu.py  camel.py  config.py
tests/: test_api.py  test_direct_access.py  test_features.py  test_mock_access.py  test_other.py
